package $1_where.$1_business_logic.$4_on_arg.domain

trait NoticeRepository {
  def campaign(customer: CampaignTargetCustomer): Unit
}
