package $1_where.$1_business_logic.$4_on_arg.domain;

public enum Plan {
    FREE, PREMIUM
}
